--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ CVS
 Backup[ ]of[ ]*.pages/
 Backup[ ]of[ ]*.key/
 Backup[ ]of[ ]*.numbers/
+
+Darwinism.xcodeproj/project.xcworkspace/xcuserdata/ZQP.xcuserdatad/UserInterfaceState.xcuserstate
